airflow/logs/dag_id=flood_prediction_pipeline/run_id=scheduled__2025-10-24T155000+0000/task_id=send_slack_alert/attempt=1.log
[2025-10-24T16:30:39.350+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2025-10-24T16:30:39.513+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: flood_prediction_pipeline.send_slack_alert scheduled__2025-10-24T15:50:00+00:00 [queued]>
[2025-10-24T16:30:39.593+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: flood_prediction_pipeline.send_slack_alert scheduled__2025-10-24T15:50:00+00:00 [queued]>
[2025-10-24T16:30:39.639+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2025-10-24T16:30:39.754+0000] {taskinstance.py:2330} INFO - Executing <Task(SlackWebhookOperator): send_slack_alert> on 2025-10-24 15:50:00+00:00
[2025-10-24T16:30:39.806+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=209) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2025-10-24T16:30:39.805+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'flood_prediction_pipeline', 'send_slack_alert', 'scheduled__2025-10-24T15:50:00+00:00', '--job-id', '620', '--raw', '--subdir', 'DAGS_FOLDER/flood_prediction_dag.py', '--cfg-path', '/tmp/tmpaihjtkp4']
[2025-10-24T16:30:39.825+0000] {standard_task_runner.py:63} INFO - Started process 223 to run task
[2025-10-24T16:30:39.858+0000] {standard_task_runner.py:91} INFO - Job 620: Subtask send_slack_alert
[2025-10-24T16:30:40.580+0000] {task_command.py:426} INFO - Running <TaskInstance: flood_prediction_pipeline.send_slack_alert scheduled__2025-10-24T15:50:00+00:00 [running]> on host 83fe312068ac
[2025-10-24T16:30:41.098+0000] {abstractoperator.py:725} ERROR - Exception rendering Jinja template for task 'send_slack_alert', field 'message'. Template: '\n    {% set data = ti.xcom_pull(task_ids=\'predict_and_log\', key=\'alert_data\', default="{"city": "N/A (Skipped)", "timestamp": "N/A", "probability": 0, "rain_24h": 0}") %}\n    :rotating_light: *URGENT FLOOD ALERT* :rotating_light:\n    \n    *Location:* {{ data[\'city\'] }}\n    *Time:* {{ data[\'timestamp\'] }}\n    *Predicted Probability:* *{{ data[\'probability\'] | float | round(2) }}* *Rain (24h Accumulated):* {{ data[\'rain_24h\'] | float | round(2) }} units\n    \n    > :warning: *ACTION REQUIRED:* Flood risk has surpassed the 75% threshold.\n    '
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/abstractoperator.py", line 717, in _do_render_template_fields
    rendered_content = self.render_template(
                       ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/template/templater.py", line 168, in render_template
    template = jinja_env.from_string(value)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 1105, in from_string
    return cls.from_code(self, self.compile(source), gs, None)
                               ^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 936, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "<unknown>", line 2, in template
jinja2.exceptions.TemplateSyntaxError: expected token ',', got 'city'
[2025-10-24T16:30:41.195+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 2479, in _run_raw_task
    self._execute_task_with_callbacks(context, test_mode, session=session)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 2633, in _execute_task_with_callbacks
    task_orig = self.render_templates(context=context, jinja_env=jinja_env)
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3094, in render_templates
    original_task.render_template_fields(context, jinja_env)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 1336, in render_template_fields
    self._do_render_template_fields(self, self.template_fields, context, jinja_env, set())
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/abstractoperator.py", line 717, in _do_render_template_fields
    rendered_content = self.render_template(
                       ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/template/templater.py", line 168, in render_template
    template = jinja_env.from_string(value)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 1105, in from_string
    return cls.from_code(self, self.compile(source), gs, None)
                               ^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 936, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "<unknown>", line 2, in template
jinja2.exceptions.TemplateSyntaxError: expected token ',', got 'city'
[2025-10-24T16:30:41.326+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=flood_prediction_pipeline, task_id=send_slack_alert, run_id=scheduled__2025-10-24T15:50:00+00:00, execution_date=20251024T155000, start_date=20251024T163039, end_date=20251024T163041
[2025-10-24T16:30:41.417+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 620 for task send_slack_alert (expected token ',', got 'city'; 223)
[2025-10-24T16:30:41.486+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2025-10-24T16:30:41.543+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
